--- a/package.json
+++ b/package.json
@@ -1,16 +1,34 @@
 {
-  "dependencies": {
-    "cors": "^2.8.5",
-    "dotenv": "^10.0.0",
-    "express": "^4.17.1",
-    "joi": "^17.4.2",
-    "mysql2": "^2.3.0",
-    "sequelize": "^6.7.0"
-  },
-  "devDependencies": {
-    "@types/cors": "^2.8.12",
-    "@types/express": "^4.17.13",
-    "@types/node": "^16.10.3",
-    "@types/sequelize": "^4.28.10"
-  }
+     "scripts": {
+          "test": "echo \"Error: no test specified\" && exit 1",
+          "debug": "export DEBUG=* && npm run start",
+          "start": "pm2-runtime start ecosystem.config.js --env production --only production",
+          "start:dev": "pm2-runtime kill && pm2-runtime start ecosystem.config.js --env development --only development",
+          "postinstall": "tsc",
+          "deploy": "git add . && git commit -m Heroku && git push heroku main",
+          "heroku-postbuild": "npm install pm2"
+     },
+     "repository": {
+          "type": "git",
+          "url": "git+https://github.com/seunexplicit/bincom_backend.git"
+     },
+     "dependencies": {
+          "cors": "^2.8.5",
+          "dotenv": "^10.0.0",
+          "express": "^4.17.1",
+          "joi": "^17.4.2",
+          "mysql-import": "^5.0.21",
+          "mysql2": "^2.3.0",
+          "pm2": "^5.1.2",
+          "sequelize": "^6.7.0"
+     },
+     "devDependencies": {
+          "@types/cors": "^2.8.12",
+          "@types/express": "^4.17.13",
+          "@types/mysql-import": "^2.0.1",
+          "@types/node": "^16.10.3",
+          "@types/sequelize": "^4.28.10",
+          "ts-node": "^10.3.0",
+          "tsconfig-paths": "^3.11.0"
+     }
 }
