--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
+     "name": "bincom",
+     "main": "app.js",
+     "version": "1.0.0",
      "scripts": {
           "test": "echo \"Error: no test specified\" && exit 1",
           "debug": "export DEBUG=* && npm run start",
           "start": "pm2-runtime start ecosystem.config.js --env production --only production",
           "start:dev": "pm2-runtime kill && pm2-runtime start ecosystem.config.js --env development --only development",
           "postinstall": "tsc",
-          "deploy": "git add . && git commit -m Heroku && git push heroku main",
           "heroku-postbuild": "npm install pm2"
      },
      "repository": {
