--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
           "mysql-import": "^5.0.21",
           "mysql2": "^2.3.0",
           "pm2": "^5.1.2",
+          "typescript": "^4.3.5",
           "sequelize": "^6.7.0"
      },
      "devDependencies": {
